[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
reqwest = {version = "0.12", features = ["json", "blocking"]}
tokio = {version = "1", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
rust_decimal = "1.35.0"

[build-dependencies]
slint-build = "1.8.0"
